# adasigpy

./: .gitignore  README.md  pyproject.toml  setup.cfg  setup.py
src/adasigpy/: method.py
