[metadata]
name = aspy
version = 0.0.1rc
description = Adaptive Signal Processing Package in Python
authors = ["borley1211 <km.isetan@gmail.com>"]
long_description = file: "./README.md"
long_description_content_type = text/markdown
license_file = file: "./LICENSE"
url = https://github.com/borley1211/aspy

[options]
include_package_data = True
zip_safe = False
python_requires = ">=3.6"
packages = find:

[options.packages.find]
where = ./src

[flake8]
exclude = __init__.py
max_line_length = 89
ignore = E203,E265,W293,W503,W504,E501,W605,F403,E999,F401

[mypy]
ignore_missing_imports = True
namespace_packages = True
